<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_second"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tv3"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#FFFFFF"

        />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        android:layout_below="@id/tv3"

        >

    </TextView>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        android:layout_below="@id/tv4"

        >

    </TextView>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn2"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#000000"
        android:background="@drawable/fondo_btn1_btn2"
        app:backgroundTint="@null"
        android:layout_below="@id/tv5"
        >

    </Button>

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tv6"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#000000"
        android:layout_below="@id/btn2"
        >

    </TextView>

</RelativeLayout>